# shadow-drop

backend/: .env.example  Cargo.toml  render.yaml
backend/migrations/: 20240201220000_init.sql
backend/src/: config.rs  lib.rs  logging.rs  main.rs  models.rs  state.rs
backend/src/common/: merkle.rs  mod.rs  server.rs
backend/src/common/response/: error.rs  mod.rs  success.rs
backend/src/middleware/: http_trace_middleware.rs  mod.rs
backend/src/routes/: campaigns.rs  mod.rs  proofs.rs  zk_proofs.rs
backend/src/zk/: mod.rs  prover.rs  types.rs
circuits/: Nargo.toml  Prover.toml  justfile
circuits/src/: main.nr
circuits/sunspot-out/: shadow_drop.ccs
contracts/: Anchor.toml  README.md
contracts/programs/contracts/: Cargo.toml
contracts/programs/contracts/src/: lib.rs
contracts/programs/contracts/tests/: test.rs
contracts/tests/: test.ts
ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
ui/public/circuits/: shadow_drop.json
ui/src/: idl.json  main.tsx
ui/src/components/: Dashboard.tsx
ui/src/hooks/: useShadowDrop.ts
ui/src/lib/: api.ts  light.ts  noir.ts  pda.ts  shadow_drop.json
ui/src/providers/: SolanaProvider.tsx
