[package]
name = "shadow-drop-api"
version = "0.0.4"
edition = "2024"

[dependencies]
axum = "0.8.8"
bs58 = "0.5"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs", "process"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid" ] }
taceo-poseidon2 = "0.2.1"
ark-bn254 = "0.5"
ark-ff = "0.5"
