[package]
name = "shadow-drop-contracts"
version = "0.0.2"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
light-sdk = { version = "0.19.0", features = ["anchor", "anchor-discriminator", "cpi-context"] }
light-sdk-types = { version = "0.19.0" }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "2.2"

# [dev-dependencies]
# light-client = { version = "0.19.0" }
# light-program-test = { version = "0.19.0" }
# tokio = "1.36.0"
# blake3 = "=1.5.5"
# time = "=0.3.36"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
